# artisjokke

./: ChangeLog  GNUmakefile.in  LICENSE  README.texi  VERSION  aclocal.m4  autogen.sh  config.hh.in  config.make.in  configure  configure.in  exp-flops.cc  plot-force.r  plot-h-error.r
defolib/: GNUmakefile  big-vector.cc  big-vector.hh  bottom-fix-hook.cc  bottom-fix-hook.hh  consistent-veronda.cc  consistent-veronda.icc  convergence-statistics.cc  convergence-statistics.hh  debug.hh  defo-proto.hh  defo-settings.cc  deformation-constraints-io.cc  deformation-constraints.cc  deformation-constraints.hh  deformation-hook.cc  deformation-hook.hh  deformation-io.cc  deformation-state.cc  deformation-state.hh  deformation-state2.cc  dynamic-deformation-state.cc  dynamic-deformation-state.hh  element-state.cc  element-state.hh  element-state.icc  geometry.hh  geometry2.cc  geometry2.hh  geometry3.cc  geometry3.hh  incremental-newton-solver.cc  incremental-newton-solver.hh  iteration-state.cc  iteration-state.hh  line-search-state.cc  line-search-state.hh  linear-cg-state.cc  linear-cg-state.hh  linear-geometry.cc  (+38 more)
make/: generic-vars.make  stepmake.make
meshlib/: GNUmakefile  array.hh  array.icc  edge-watcher.cc  edge-watcher.hh  mesh-connectivity-watcher.cc  mesh-connectivity-watcher.hh  mesh-connectivity.cc  mesh-connectivity.hh  mesh-feature.cc  mesh-feature.hh  mesh-proto.hh  node.cc  node.hh  parray.hh  simplex.cc  simplex.hh  stl.hh  topological-operation.cc
needle2d/: GNUmakefile  artisjokke-drawer2.cc  artisjokke-drawer2.hh  auto-insert.cc  auto-insert.hh  main.cc  (+18 more)
(+36 files in other folders)
