AC_INIT


AC_CONFIG_HEADER($CONFIGFILE.h:config.hh.in)

# Bootstrap StepMake configure
AC_CONFIG_AUX_DIR([stepmake/bin])
STEPMAKE_INIT


# List a file that identifies your package.
AC_CONFIG_SRCDIR([needle2d/main.cc])
# Move to aclocal.m4?
# AC_CONFIG_HEADER([$CONFIGFILE.h:config.hh.in])

# For all packages except the StepMake package itself
AC_CONFIG_SUBDIRS(stepmake)

# must come before any header checks
STEPMAKE_COMPILE
	
STEPMAKE_CXX(REQUIRED)
STEPMAKE_GXX(REQUIRED, 2.95)
STEPMAKE_GCC(REQUIRED)
STEPMAKE_GCC(REQUIRED, 2.95)
STEPMAKE_CXXTEMPLATE
STEPMAKE_LIB(REQUIRED)


AC_ARG_ENABLE(opengl,
    [  --enable-opengl       set OpenGL interface],
    [opengl_b=$enableval] )

AC_ARG_ENABLE(single,
    [  --enable-single          turn on single precision FP math],
    [single_b=$enableval] )


if test "$opengl_b" = yes; then
	DEFINES="$DEFINES -DOPENGL"
	LIBS="$LIBS -L/usr/X11R6/lib  -lglut -lGLU -lGL -lXext -lXi -lXmu -lX11 "
fi

if test "$single_b" = yes; then
	DEFINES="$DEFINES -DSINGLE_PRECISION"
fi

if test "$optimise_b" = yes; then
	CFLAGS="$CFLAGS -O3 -funroll-loops "`cat $HOME/.gcc-archopt`
	CXXFLAGS="$CXXFLAGS -O3  -funroll-loops "`cat $HOME/.gcc-archopt`
fi

AC_DEFINE_UNQUOTED(TOPLEVEL_VERSION, "${FULL_VERSION}")

# Gather requirements and generate output.
STEPMAKE_END
